@@ -2,6 +2,7 @@ package RestInn.service;
 
 import RestInn.dto.habitacionesDTO.HabitacionResponseDTO;
 import RestInn.dto.reservasDTO.HuespedRequestDTO;
+import RestInn.dto.reservasDTO.HuespedResponseDTO;
 import RestInn.dto.reservasDTO.ReservaRequestDTO;
 import RestInn.dto.reservasDTO.ReservaResponseDTO;
 import RestInn.entities.enums.EstadoReserva;
@@ -12,15 +13,19 @@ import RestInn.entities.usuarios.Usuario;
 import RestInn.repositories.ReservaRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
 public class ReservaService {
+
     private final ReservaRepository reservaRepository;
     private final UsuarioService usuarioService;
     private final HabitacionService habitacionService;
@@ -34,23 +39,38 @@ public class ReservaService {
         this.habitacionService = habitacionService;
     }
 
-    // Obtener todas las reservas (con map a DTO completo)
-    public List<ReservaResponseDTO> obtenerReservas() {
-        List<Reserva> reservas = reservaRepository.findAll();
-        return reservas.stream()
-                .map(this::mapReservaAResponseDTO)
-                .toList();
-    }
+    // ========================
+    // CREACIÓN DE RESERVA
+    // ========================
 
-    // Crear reserva desde DTO, mapeando huespedes también
-    public ReservaResponseDTO crearReservaDesdeDto(ReservaRequestDTO dto) {
-        // Validación de fechas la hace el validador @ReservaValida
-        Usuario usuario = usuarioService.buscarEntidadPorId(dto.getUsuarioId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuario no encontrado"));
+    //Crea una nueva reserva validando disponibilidad de la habitación
+    public ReservaResponseDTO crearReservaDesdeDto(ReservaRequestDTO dto, Usuario usuario) {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        String username = auth.getName();
 
-        HabitacionResponseDTO habitacion = habitacionService.buscarDTOPorId(dto.getHabitacionId())
+        usuario = usuarioService
+                .buscarEntidadPorNombreLogin(username)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "Usuario no encontrado"));
+
+        Habitacion habitacion = habitacionService
+                .buscarEntidadPorId(dto.getHabitacionId())
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "Habitación no encontrada"));
+
+        boolean ocupado = reservaRepository.existsByHabitacionAndFechaIngresoLessThanAndFechaSalidaGreaterThan(
+                habitacion, dto.getFechaSalida(), dto.getFechaIngreso()
+        );
+
+        HabitacionResponseDTO habitacionDTO = habitacionService.buscarDTOPorId(dto.getHabitacionId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Habitación no encontrada"));
-        Habitacion habitacionEntidad = habitacionService.convertirAEntidad(habitacion);
+        Habitacion habitacionEntidad = habitacionService.convertirAEntidad(habitacionDTO);
+        if (ocupado) {
+            throw new ResponseStatusException(
+                    HttpStatus.CONFLICT,
+                    "La habitación ya está reservada en esas fechas"
+            );
+        }
 
         Reserva reserva = new Reserva();
         reserva.setUsuario(usuario);
@@ -58,22 +78,31 @@ public class ReservaService {
         reserva.setFechaIngreso(dto.getFechaIngreso());
         reserva.setFechaSalida(dto.getFechaSalida());
         reserva.setFechaReserva(LocalDate.now());
-        reserva.setEstadoReserva(EstadoReserva.PENDIENTE); // Ajusta según tu lógica
+        reserva.setEstadoReserva(EstadoReserva.PENDIENTE);
 
-        // Mapear huespedes desde DTO a entidad
-        if (dto.getHuespedes() != null && !dto.getHuespedes().isEmpty()) {
-            List<Huesped> huespedes = dto.getHuespedes().stream()
-                    .map(this::mapHuespedRequestDtoAEntidad)
-                    .collect(Collectors.toList());
-            reserva.setHuespedes(huespedes);
-        }
+        List<Huesped> huespedes = dto.getHuespedes().stream()
+                .map(dtoH -> new Huesped(dtoH.getNombre(), dtoH.getApellido(), dtoH.getDni()))
+                .toList();
+
+        reserva.setHuespedes(huespedes);
 
         Reserva guardada = reservaRepository.save(reserva);
 
         return mapReservaAResponseDTO(guardada);
     }
 
-    // Obtener reserva por ID
+    // ========================
+    // CONSULTA DE RESERVAS
+    // ========================
+
+    //Retorna todas las reservas
+    public List<ReservaResponseDTO> obtenerReservas() {
+        return reservaRepository.findAll().stream()
+                .map(this::mapReservaAResponseDTO)
+                .toList();
+    }
+
+    //Retorna una reserva por ID
     public ReservaResponseDTO obtenerReservaPorId(Long id) {
         Reserva reserva = reservaRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Reserva con ID " + id + " no encontrada."));
@@ -81,47 +110,104 @@ public class ReservaService {
         return mapReservaAResponseDTO(reserva);
     }
 
-    // Actualizar reserva desde DTO (sin tocar usuario, habitación ni huespedes por simplicidad)
+    //Retorna todas las reservas hechas por un usuario
+    public List<ReservaResponseDTO> obtenerReservasPorUsuarioId(Long usuarioId) {
+        return reservaRepository.findByUsuarioId(usuarioId).stream()
+                .map(this::mapReservaAResponseDTO)
+                .toList();
+    }
+
+    //Retorna reservas de un usuario entre dos fechas
+    public List<ReservaResponseDTO> buscarReservasEntreFechas(Usuario usuario, LocalDate desde, LocalDate hasta) {
+        return reservaRepository.findByUsuarioAndFechaIngresoLessThanEqualAndFechaSalidaGreaterThanEqual(usuario, desde, hasta)
+                .stream()
+                .map(this::mapReservaAResponseDTO)
+                .toList();
+    }
+
+    //Retorna IDs de habitaciones ocupadas en un rango de fechas
+    public Set<Long> obtenerIdsHabitacionesOcupadas(LocalDate ingreso, LocalDate salida) {
+        return reservaRepository
+                .findByFechaIngresoLessThanAndFechaSalidaGreaterThan(salida, ingreso)
+                .stream()
+                .filter(r -> r.getEstadoReserva() != EstadoReserva.CANCELADA)
+                .map(r -> r.getHabitacion().getId())
+                .collect(Collectors.toSet());
+    }
+
+    // ========================
+    // ACTUALIZACIÓN DE RESERVA
+    // ========================
+
+    //Actualiza fechas de una reserva (no toca habitación ni huéspedes)
     public ReservaResponseDTO actualizarReservaDesdeDto(Long id, ReservaRequestDTO dto) {
         Reserva reserva = reservaRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Reserva no encontrada"));
 
         reserva.setFechaIngreso(dto.getFechaIngreso());
         reserva.setFechaSalida(dto.getFechaSalida());
-        // Si querés actualizar huespedes, tendrías que hacerlo acá también.
+        // Si querés actualizar huéspedes, hacelo acá
 
         Reserva actualizada = reservaRepository.save(reserva);
-
         return mapReservaAResponseDTO(actualizada);
     }
 
-    // Eliminar reserva por ID
+    // ========================
+    // ELIMINACIÓN DE RESERVA
+    // ========================
+
+    //Elimina una reserva por ID
     public void eliminarReserva(Long id) {
         reservaRepository.deleteById(id);
     }
 
-    public List<ReservaResponseDTO> buscarReservasEntreFechas(Usuario usuario, LocalDate desde, LocalDate hasta) {
-        List<Reserva> reservas = reservaRepository.findByUsuarioAndFechaIngresoLessThanEqualAndFechaSalidaGreaterThanEqual(usuario, desde, hasta);
+    // ========================
+    // CHECK-IN Y CHECK-OUT
+    // ========================
 
-        return reservas.stream()
-                .map(this::mapReservaAResponseDTO)
-                .toList();
+    //Cambia el estado de la reserva a CONFIRMADA (Check-in)
+    public ReservaResponseDTO realizarCheckIn(Long reservaId) {
+        Reserva reserva = reservaRepository.findById(reservaId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Reserva no encontrada"));
+
+        if (reserva.getEstadoReserva() != EstadoReserva.PENDIENTE) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Solo se puede hacer check-in de reservas pendientes.");
+        }
+
+        reserva.setEstadoReserva(EstadoReserva.CONFIRMADA);
+        Reserva actualizada = reservaRepository.save(reserva);
+        return mapReservaAResponseDTO(actualizada);
     }
 
-    public List<ReservaResponseDTO> obtenerReservasPorUsuarioId(Long usuarioId) {
-        List<Reserva> reservas = reservaRepository.findByUsuarioId(usuarioId);
-        return reservas.stream()
-                .map(this::mapReservaAResponseDTO)
-                .toList();
+    //Cambia el estado de la reserva a FINALIZADA (Check-out)
+    public ReservaResponseDTO realizarCheckOut(Long reservaId) {
+        Reserva reserva = reservaRepository.findById(reservaId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Reserva no encontrada"));
+
+        if (reserva.getEstadoReserva() != EstadoReserva.CONFIRMADA) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Solo se puede hacer check-out de reservas confirmadas.");
+        }
+
+        reserva.setEstadoReserva(EstadoReserva.FINALIZADA);
+        Reserva actualizada = reservaRepository.save(reserva);
+        return mapReservaAResponseDTO(actualizada);
     }
+
+
+    // ========================
+    // MAPEO DE ENTIDADES A DTO
+    // ========================
 
     private ReservaResponseDTO mapReservaAResponseDTO(Reserva reserva) {
-        List<Long> huespedesIds = reserva.getHuespedes() != null
-                ? reserva.getHuespedes().stream().map(Huesped::getId).toList()
-                : List.of();
-
-        List<Huesped> huespedes = reserva.getHuespedes() != null
-                ? reserva.getHuespedes()
+        List<HuespedResponseDTO> huespedes = reserva.getHuespedes() != null
+                ? reserva.getHuespedes().stream()
+                .map(h -> {
+                    HuespedResponseDTO dto = new HuespedResponseDTO();
+                    dto.setNombre(h.getNombre());
+                    dto.setApellido(h.getApellido());
+                    dto.setDni(h.getDni());
+                    return dto;
+                }).toList()
                 : List.of();
 
         return new ReservaResponseDTO(
@@ -131,7 +217,6 @@ public class ReservaService {
                 reserva.getFechaReserva(),
                 reserva.getUsuario().getId(),
                 reserva.getHabitacion().getId(),
-                huespedesIds,
                 reserva.getEstadoReserva().name(),
                 reserva.getHabitacion().getNumero(),
                 huespedes
@@ -140,11 +225,9 @@ public class ReservaService {
 
     private Huesped mapHuespedRequestDtoAEntidad(HuespedRequestDTO dto) {
         Huesped huesped = new Huesped();
-        // Mapea los campos necesarios, ej:
         huesped.setNombre(dto.getNombre());
         huesped.setApellido(dto.getApellido());
         huesped.setDni(dto.getDni());
-        // etc, según tu entidad y DTO de huesped
         return huesped;
     }
 }
